# housing-price-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env
.github/workflows/: pre-commit.yml  test.yml
housing_prices/: app.py  logs.py  predict.py  predicting.py  prediction.py  settings.py
housing_prices/api/: dependencies.py  limiter.py  routers.py  schemas.py
tests/: conftest.py  test_api.py
